.provarCaches/00D5f000005vwGkEAI/objects/rstk__syconfig__c.object
<CustomObject>
    <fields>
        <fullName>rstk__syconfig_solidworksint__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>We do not currently support an interface to SolidWorks - for possible future use.</inlineHelpText>
        <label>SolidWorks Interface Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_solinemarkupopt__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When Checked, the system will use an alternate Method for calculation SO Line Labor cost.</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_solineseract__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, the Predefine Serial Numbers on SO Line may be enabled or disabled in the Sales Order control records for the Divisions.</inlineHelpText>
        <label>Predefine Serial Numbers on SO Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_srllocchange__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, changing the location of Serialized Inventory Locations is allowed and does not generate an Inventory Cost Transaction in doing so.</inlineHelpText>
        <label>Allow Change to Serialized Inventory Loc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_stdrootscan__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The number of licenses for standard Mobile RootScan functionality, controlling how many users are allowed to use the full supported Mobile functionality.</inlineHelpText>
        <label>Number of Full RootScan Users</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_subcontract__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When checked, the ability to utilize Subcontract Purchase functionality is enabled.</inlineHelpText>
        <label>Subcontract Purchase Orders Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_sysrevlvl__c</fullName>
        <defaultValue>1.0</defaultValue>
        <inlineHelpText>Internal Use.  Currently only support a value of 1.000000.</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <precision>10</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_testprinciplepasscode__c</fullName>
        <inlineHelpText>Only used for the Principle Interface.</inlineHelpText>
        <label>Principle Test Passcode</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_timeattend__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, Time and Attendance functionality is enabled.</inlineHelpText>
        <label>Time and Attendance Active (Future Use)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_toolinventory__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>We do not currently support Tool Inventory functionality - for possible future use.</inlineHelpText>
        <label>Tool Inventory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_wbs__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, the ability to utilize Project Charge Code functionality is enabled</inlineHelpText>
        <label>Project Charge Code Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_wht__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, Withholding Tax (WHT) functionality is enabled.</inlineHelpText>
        <label>Withholding Tax Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_wooverrcpt__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field enables a corresponding field at the Division level, which allows for over receipts on Work Orders in that Division. This feature as currently implemented best supports companies that are not tight discrete manufactures.</inlineHelpText>
        <label>Allow Work Order Over Receipt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_workorder__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, the ability to utilize Work Order functionality is enabled</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_xigactive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Currently Used</inlineHelpText>
        <label>Xignite Interface Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_xigtoken__c</fullName>
        <inlineHelpText>Not Currently Used</inlineHelpText>
        <label>Xignite Access Token</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>System Configuration</label>
    <listViews>
        <fullName>RS_Syconfig_1</fullName>
        <columns>NAME</columns>
        <columns>rstk__syconfig_customer__c</columns>
        <columns>rstk__syconfig_frghtothlnd__c</columns>
        <columns>rstk__syconfig_multidiv__c</columns>
        <filterScope>Everything</filterScope>
        <label>RS Syconfig-1</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__RS_Syconfig</fullName>
        <columns>NAME</columns>
        <columns>rstk__syconfig_password__c</columns>
        <columns>rstk__syconfig_heroku__c</columns>
        <columns>rstk__syconfig_gradelvl__c</columns>
        <columns>rstk__syconfig_customer__c</columns>
        <columns>rstk__syconfig_ffinvoice__c</columns>
        <columns>rstk__syconfig_ffprojidfld__c</columns>
        <columns>rstk__syconfig_multidiv__c</columns>
        <columns>rstk__syconfig_numbauthusers__c</columns>
        <columns>rstk__syconfig_numblaboronlyusers__c</columns>
        <columns>rstk__syconfig_quickbooks__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__syconfig_poloader__c</columns>
        <columns>rstk__syconfig_rootdox__c</columns>
        <filterScope>Everything</filterScope>
        <label>RS Syconfig</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>System Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstk__AuthfinuserNotgreaterThanAuthfinusers</fullName>
        <active>true</active>
        <description>Value for Authorized Financial Users should not be greater than Number of Authorized Users</description>
        <errorConditionFormula>rstk__syconfig_authfinusers__c  &gt;  rstk__syconfig_numbauthusers__c</errorConditionFormula>
        <errorMessage>Authorized Financial Users cannot be greater than Number of Authorized Users</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__OneAcctPkgActive</fullName>
        <active>true</active>
        <errorConditionFormula>(rstk__syconfig_ffint__c &amp;&amp; rstk__syconfig_quickbooks__c)</errorConditionFormula>
        <errorMessage>Only one accounting system interface can be active at a time.</errorMessage>
    </validationRules>
</CustomObject>